examplescdir = $(datadir)/$(PACKAGE)/examples
examplesc_DATA= thrombosis_snps.ids thrombosis_snps.csv			\
thrombosis_snps.md thrombosis_snps.html thrombosis_snps.pdf		\
extract_unique_10.kw extract_unique_10.snp_kw extract_pos_10.kw		\
extract_pos_10.snp_kw extract_hyper_10.kw extract_hyper_10.snp_kw	\
cardiovascular_disease_snps.ids obesity_early_onset_snps.ids

EXTRA_DIST= $(examplesc_DATA)
